no ngx-build-plus

--- a/projects/dashboard-tile/src/index.html
+++ b/projects/dashboard-tile/src/index.html
@@ -20,7 +20,9 @@
 
   <div style="margin:50px">
     <div class="col-sm-3">
-      <external-dashboard-tile a="50" b="60" c="70"></external-dashboard-tile>
+      
+      <external-dashboard-tile [src]="1"></external-dashboard-tile>
+      
     </div>
   </div>
 
